feat: enhance case studies with additional metadata and improve layout for better organization

--- a/src/content/en-case-studies/commerce-operations-platform.mdx
+++ b/src/content/en-case-studies/commerce-operations-platform.mdx
@@ -1,6 +1,11 @@
 ---
 title: E-commerce platform integrated with operations and automation
-summary: Evolution of a system from an MVP into a distributed platform supporting sales, logistics, and operations.
+summary: Evolving a system from an MVP into a distributed platform supporting sales, logistics, and operations.
+
+category: Systems & Architecture
+featured: true
+priority: 90
+tags: ["system design", "mvp-to-production", "asynchronous processing", "integrations", "operations", "observability"]
 ---
 
 ## Starting point
