--- a/src/content/en-case-studies/distributed-platform.mdx
+++ b/src/content/en-case-studies/distributed-platform.mdx
@@ -1,6 +1,11 @@
 ---
 title: Distributed production system connecting cloud and physical devices
-summary: Design, deployment, and long-term evolution of a 24/7 production system integrating microservices with physical infrastructure.
+summary: Design, deployment, and long-term evolution of a 24/7 system combining microservices architecture with physical infrastructure.
+
+category: Systems & Architecture
+featured: true
+priority: 100
+tags: ["microservices", "event-driven", "edge devices", "24/7", "idempotency", "observability", "kubernetes"]
 ---
 
 ## Business context
