--- a/src/content/en-case-studies/field-operations-platform.mdx
+++ b/src/content/en-case-studies/field-operations-platform.mdx
@@ -1,6 +1,11 @@
 ---
-title: Field operations platform
-summary: Design and delivery of a system supporting daily work of teams operating in the field.
+title: Operational system for field teams
+summary: Design and implementation of a platform supporting the daily work of teams operating in the field.
+
+category: Frontend & UX
+featured: false
+priority: 60
+tags: ["operations", "field teams", "ux", "api-first", "asynchronous processing", "auditability", "offline-ready"]
 ---
 
 ## Context
