--- a/src/content/en-case-studies/system-refactor-stabilization.mdx
+++ b/src/content/en-case-studies/system-refactor-stabilization.mdx
@@ -1,6 +1,11 @@
 ---
-title: Production system refactor and stabilization
-summary: Gradual transformation of a growing production system without service downtime.
+title: Refactoring and stabilization of a production system
+summary: Gradual transformation of an increasingly complex system without production downtime.
+
+category: Stabilization & Refactoring
+featured: false
+priority: 50
+tags: ["refactoring", "production", "stabilization", "evolutionary architecture", "observability", "api contracts"]
 ---
 
 ## Initial situation
