--- a/src/content/pl-case-studies/field-operations-platform.mdx
+++ b/src/content/pl-case-studies/field-operations-platform.mdx
@@ -1,6 +1,11 @@
 ---
 title: System operacyjny dla zespołów terenowych
 summary: Projekt i wdrożenie platformy wspierającej codzienną pracę zespołów operujących w terenie.
+
+category: Frontend i UX
+featured: false
+priority: 60
+tags: ["operacje", "field teams", "ux", "api-first", "asynchroniczność", "audyt", "offline-ready"]
 ---
 
 ## Kontekst
