--- a/src/content/pl-case-studies/system-refactor-stabilization.mdx
+++ b/src/content/pl-case-studies/system-refactor-stabilization.mdx
@@ -1,6 +1,11 @@
 ---
 title: Refaktoryzacja i stabilizacja systemu produkcyjnego
 summary: Stopniowa transformacja systemu o rosnącej złożoności bez przestojów produkcyjnych.
+
+category: Stabilizacja i refaktoryzacja
+featured: false
+priority: 50
+tags: ["refaktoryzacja", "production", "stabilizacja", "ewolucyjna architektura", "observability", "api contracts"]
 ---
 
 ## Sytuacja wyjściowa
