--- a/src/content/pl-case-studies/commerce-operations-platform.mdx
+++ b/src/content/pl-case-studies/commerce-operations-platform.mdx
@@ -1,6 +1,11 @@
 ---
 title: Platforma e-commerce zintegrowana z operacjami i automatyką
 summary: Rozwój systemu od MVP do rozproszonej platformy obsługującej sprzedaż, logistykę i operacje.
+
+category: Systemy i architektura
+featured: true
+priority: 90
+tags: ["system design", "mvp→prod", "asynchroniczność", "integracje", "operacyjność", "observability"]
 ---
 
 ## Punkt wyjścia
