--- a/src/content/pl-case-studies/distributed-platform.mdx
+++ b/src/content/pl-case-studies/distributed-platform.mdx
@@ -1,6 +1,11 @@
 ---
 title: Rozproszony system produkcyjny łączący cloud z fizycznymi urządzeniami
 summary: Projekt, wdrożenie i rozwój systemu działającego 24/7, łączącego architekturę microservices z fizyczną infrastrukturą.
+
+category: Systemy i architektura
+featured: true
+priority: 100
+tags: ["microservices", "event-driven", "edge devices", "24/7", "idempotencja", "observability", "kubernetes"]
 ---
 
 ## Kontekst biznesowy
