feat: add related system components section to kiosk case studies

--- a/src/content/en-case-studies/kiosk-runtime-watchdog.mdx
+++ b/src/content/en-case-studies/kiosk-runtime-watchdog.mdx
@@ -193,6 +193,19 @@ This case study highlights how **robust systems are often built from very small,
 
 ---
 
+## Related system components
+
+This runtime watchdog supervises a **separate kiosk web application**, responsible for user interaction and business flow.
+
+The application runs as an independent web service within the machine’s internal network and is isolated from the device runtime.
+
+👉 See related case study:  
+**Touch-first kiosk web application for public machines**
+
+https://rocketdeploy.dev/en/case-studies/kiosk-web-application/
+
+---
+
 ## Architecture showcase (GitHub)
 
 This case study focuses on **context, decisions, and outcomes**.
