--- a/src/content/pl-case-studies/kiosk-runtime-watchdog.mdx
+++ b/src/content/pl-case-studies/kiosk-runtime-watchdog.mdx
@@ -193,6 +193,19 @@ To case study pokazuje, że **solidne systemy często opierają się na bardzo m
 
 ---
 
+## Powiązane komponenty systemu
+
+Ten runtime watchdog nadzoruje **oddzielną aplikację kioskową**, odpowiedzialną za interakcję z użytkownikiem i logikę operacyjną.
+
+Aplikacja działa jako niezależna usługa webowa w wewnętrznej sieci maszyny i jest odseparowana od runtime’u urządzenia.
+
+👉 Zobacz powiązane case study:  
+**Dotykowa aplikacja webowa dla publicznych kiosków**
+
+https://rocketdeploy.dev/pl/case-studies/kiosk-web-application/
+
+---
+
 ## Architecture showcase (GitHub)
 
 To case study skupia się na **kontekście, decyzjach i rezultatach**.
