feat: update image formats to WebP for improved performance in company website case study

--- a/src/content/en-case-studies/company-website.mdx
+++ b/src/content/en-case-studies/company-website.mdx
@@ -140,22 +140,22 @@ The visual layer emphasizes:
   cols={2}
   images={[
     {
-      src: "/case-studies/company-website/1_1.png",
+      src: "/case-studies/company-website/1_1.webp",
       alt: "Homepage (desktop)",
       caption: "Homepage view emphasizing clarity, hierarchy, and fast initial load."
     },
     {
-      src: "/case-studies/company-website/1_2.png",
+      src: "/case-studies/company-website/1_2.webp",
       alt: "Homepage (mobile)",
       caption: "Mobile homepage with the same information structure and minimal layout shifts."
     },
     {
-      src: "/case-studies/company-website/2_1.png",
+      src: "/case-studies/company-website/2_1.webp",
       alt: "Case study page",
       caption: "Case study page optimized for long-form technical reading."
     },
     {
-      src: "/case-studies/company-website/2_2.png",
+      src: "/case-studies/company-website/3_1.webp",
       alt: "Contact page",
       caption: "Contact page with clear entry points for conversation and well-defined communication channels."
     }
