feat: remove outdated case studies and modernize e-commerce platform documentation

--- a/src/content/en-case-studies/kiosk-runtime-watchdog.mdx
+++ b/src/content/en-case-studies/kiosk-runtime-watchdog.mdx
@@ -2,7 +2,7 @@
 title: Kiosk runtime watchdog for unattended public machines
 summary: Design of a minimal, failure-safe runtime guard responsible for supervising and recovering a web-based kiosk application running on public, unattended machines.
 
-category: System architecture
+category: Systems & Architecture
 featured: false
 priority: 70
 tags: ["kiosk", "watchdog", "public systems", "reliability", "unattended runtime", "failure recovery", "system architecture"]
