--- a/src/content/pl-case-studies/distributed-platform.mdx
+++ b/src/content/pl-case-studies/distributed-platform.mdx
@@ -3,7 +3,7 @@ title: Rozproszony system produkcyjny łączący cloud z fizycznymi urządzeniam
 summary: Projekt, wdrożenie i rozwój systemu działającego 24/7, łączącego architekturę microservices z fizyczną infrastrukturą.
 
 category: Systemy i architektura
-featured: true
+featured: false
 priority: 100
 tags: ["microservices", "event-driven", "edge devices", "24/7", "idempotencja", "observability", "kubernetes"]
 ---
