--- a/src/content/pl-case-studies/kiosk-runtime-watchdog.mdx
+++ b/src/content/pl-case-studies/kiosk-runtime-watchdog.mdx
@@ -2,7 +2,7 @@
 title: Kioskowy runtime watchdog dla publicznych, bezobsługowych urządzeń
 summary: Projekt minimalnej, odpornej na awarie warstwy nadzorującej runtime, odpowiedzialnej za kontrolę i odzyskiwanie webowej aplikacji kioskowej działającej na publicznych, bezobsługowych maszynach.
 
-category: System architecture
+category: Systemy i architektura
 featured: false
 priority: 70
 tags: ["kiosk", "watchdog", "systemy publiczne", "niezawodność", "bezobsługowy runtime", "odzyskiwanie po awarii", "architektura systemów"]
